# phoenix-claude-code

./: .env.example  .gitignore  README.md  docker-compose.yml  litellm-config.yml  pyproject.toml
analysis/: golden_dataset.py  history_analyzer.py  trace_analyzer.py
judges/: __init__.py  prompt_efficiency.py  secret_hygiene.py  session_discipline.py  topic_coherence.py
notebooks/: error_analysis.ipynb
scripts/: run_judges.py  setup.sh
