[project]
name = "phoenix-claude-code"
version = "0.1.0"
description = "Monitor, evaluate, and improve your Claude Code usage with Arize Phoenix"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0",
]
notebooks = [
    "jupyter>=1.0",
    "pandas>=2.0",
    "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
